@@ -1,3 +1,9 @@
+TAG: refseqload-4-2-0-1
+DATE: 02/16/2009
+STAFF: sc
+CHANGES: uncommented running of QC reports - they must have been 
+inadvertently committed that way at some point 
+
 TAG: refseqload-4-1-3-1
 DATE: 11/11/2008
 STAFF: lec
